@@ -300,4 +300,31 @@ void FieldFormatting::change_field_name(const Glib::ustring& table_name, const G
   }
 }
 
+bool FieldFormatting::change_field_item_name(const Glib::ustring& table_name, const Glib::ustring& field_name_old, const Glib::ustring& field_name_new)
+{
+  if(!m_choices_related_field)
+    return false; //Nothing changed.
+
+  sharedptr<const Relationship> relationship = get_relationship();
+  
+  const Glib::ustring field_table = 
+    m_choices_related_field->get_table_used( relationship->get_to_table() );
+
+  if((field_table == table_name) &&
+     (m_choices_related_field->get_name() == field_name_old))
+  {
+    //Change it:
+    m_choices_related_field->set_name(field_name_new);
+    return true; //something changed.
+  }
+  
+  if(m_choices_extra_layout_group)
+  {
+    m_choices_extra_layout_group->change_field_item_name(table_name, 
+      field_name_old, field_name_new);
+  }
+
+  return false; //Nothing changed.
+}
+
 } //namespace Glom
